--- a/application/admin/view/live/edit.html
+++ b/application/admin/view/live/edit.html
@@ -142,6 +142,16 @@
             <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Add_uid')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select class="selectpicker form-control" name="row[add_uid]">
+                {volist name="admin_ids" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['add_uid']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
+        </div>
+    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
