--- a/application/admin/view/news/add.html
+++ b/application/admin/view/news/add.html
@@ -1,4 +1,5 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
+    <input type="hidden" name="row[news_image]" value="[]">
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">微信采集：</label>
         <div class="col-xs-10 col-sm-8">
@@ -54,13 +55,13 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Title_tag_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-title_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[title_tag_id]" type="text" value="">
+            <input id="c-title_tag_id" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[title_tag_id]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('News_tag_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-news_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="">
+            <input id="c-news_tag_id" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
@@ -154,7 +155,19 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
+            <p><input type="button" id="paibanBtn" value="一键排版" /></p>
             <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50"></textarea>
+        </div>
+        <div id="contentDiv" style="display:none"></div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Add_uid')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select class="selectpicker form-control" name="row[add_uid]">
+                {volist name="admin_ids" id="vo"}
+                <option value="{$key}" selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
         </div>
     </div>
     <div class="form-group layer-footer">
